Adds ../bin to .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 src/DemoApp.Core/obj/
 src/DemoApp.Infrastructure/obj/
 src/DemoApp.Web/obj/
+src/DemoApp.Core/bin/
+src/DemoApp.Infrastructure/bin/
+src/DemoApp.Web/bin/
