--- a/src/DemoApp.Web/DemoApp.Web.csproj
+++ b/src/DemoApp.Web/DemoApp.Web.csproj
@@ -7,8 +7,11 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.ListStartupServices" Version="1.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
 
