--- a/src/DemoApp.Web/appsettings.json
+++ b/src/DemoApp.Web/appsettings.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
+  "ConnectionStrings": {
+    "DemoConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=TSQLV4;"
   },
-  "AllowedHosts": "*"
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Warning",
+      "Microsoft": "Warning",
+      "System": "Warning"
+    },
+    "AllowedHosts": "*"
+  }
 }
